cmake_minimum_required(VERSION 3.8)
project(ftf)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        src/config.rs
        src/errors.rs
        src/main.rs
        src/oauth_plugin.rs
        src/plugin.rs
        src/proxy.rs
        src/tlsclient.rs
        target/debug/build/core-foundation-sys-17c54058335dcead/output
        target/debug/build/core-foundation-sys-17c54058335dcead/stderr
        target/debug/build/core-foundation-sys-30e2c474daf374a5/build_script_build-30e2c474daf374a5.dSYM/Contents/Resources/DWARF/build_script_build-30e2c474daf374a5
        target/debug/build/core-foundation-sys-30e2c474daf374a5/build_script_build-30e2c474daf374a5.dSYM/Contents/Info.plist
        target/debug/build/core-foundation-sys-30e2c474daf374a5/build-script-build
        target/debug/build/core-foundation-sys-30e2c474daf374a5/build_script_build-30e2c474daf374a5
        target/debug/build/kernel32-sys-19cd7e174a9b9b64/output
        target/debug/build/kernel32-sys-19cd7e174a9b9b64/stderr
        target/debug/build/kernel32-sys-fb72784c963d1c4e/build_script_build-fb72784c963d1c4e.dSYM/Contents/Resources/DWARF/build_script_build-fb72784c963d1c4e
        target/debug/build/kernel32-sys-fb72784c963d1c4e/build_script_build-fb72784c963d1c4e.dSYM/Contents/Info.plist
        target/debug/build/kernel32-sys-fb72784c963d1c4e/build-script-build
        target/debug/build/kernel32-sys-fb72784c963d1c4e/build_script_build-fb72784c963d1c4e
        target/debug/build/security-framework-sys-9e1089913fcc1666/build_script_build-9e1089913fcc1666.dSYM/Contents/Resources/DWARF/build_script_build-9e1089913fcc1666
        target/debug/build/security-framework-sys-9e1089913fcc1666/build_script_build-9e1089913fcc1666.dSYM/Contents/Info.plist
        target/debug/build/security-framework-sys-9e1089913fcc1666/build-script-build
        target/debug/build/security-framework-sys-9e1089913fcc1666/build_script_build-9e1089913fcc1666
        target/debug/build/security-framework-sys-ea4f516518ca7c12/output
        target/debug/build/security-framework-sys-ea4f516518ca7c12/stderr
        target/debug/build/unicase-2bc8bcfbb1efbc43/build_script_build-2bc8bcfbb1efbc43.dSYM/Contents/Resources/DWARF/build_script_build-2bc8bcfbb1efbc43
        target/debug/build/unicase-2bc8bcfbb1efbc43/build_script_build-2bc8bcfbb1efbc43.dSYM/Contents/Info.plist
        target/debug/build/unicase-2bc8bcfbb1efbc43/build-script-build
        target/debug/build/unicase-2bc8bcfbb1efbc43/build_script_build-2bc8bcfbb1efbc43
        target/debug/build/unicase-6ebc694e1e289d3c/output
        target/debug/build/unicase-6ebc694e1e289d3c/stderr
        target/debug/deps/ftf-07edf2e0ba9f2507.dSYM/Contents/Resources/DWARF/ftf-07edf2e0ba9f2507
        target/debug/deps/ftf-07edf2e0ba9f2507.dSYM/Contents/Info.plist
        target/debug/deps/libserde_derive-dfd1bcda702545d2.dylib.dSYM/Contents/Resources/DWARF/libserde_derive-dfd1bcda702545d2.dylib
        target/debug/deps/libserde_derive-dfd1bcda702545d2.dylib.dSYM/Contents/Info.plist
        target/debug/deps/ftf-07edf2e0ba9f2507
        target/debug/deps/libaho_corasick-0ca99454b4368fb9.rmeta
        target/debug/deps/libaho_corasick-49ac588d74056ee1.rlib
        target/debug/deps/libaho_corasick-8c0180a3fc7af5d8.rlib
        target/debug/deps/libansi_term-d7e9b56f4b8d7e9f.rlib
        target/debug/deps/libbacktrace-20c55c80d9b81cf6.rmeta
        target/debug/deps/libbacktrace-8e42d803442c5983.rlib
        target/debug/deps/libbase64-b6597d1935c85944.rlib
        target/debug/deps/libbase64-fa3768a4f7d01780.rmeta
        target/debug/deps/libbuild-7224f8fbff7ac7bf.rlib
        target/debug/deps/libbyteorder-39eaa68e8d1bc140.rlib
        target/debug/deps/libbyteorder-8cf4c4bf1c65a6e1.rmeta
        target/debug/deps/libbytes-94b1c74d564ec97c.rlib
        target/debug/deps/libbytes-abd736f0053b131c.rmeta
        target/debug/deps/libcfg_if-5d9610367985fd90.rlib
        target/debug/deps/libcfg_if-75a3fc4c8fda3fd7.rmeta
        target/debug/deps/libchrono-bbede0ba31e2c81b.rmeta
        target/debug/deps/libchrono-f5c2ab1e86f1e1a8.rlib
        target/debug/deps/libcore_foundation-66fa52eb3c0f2488.rlib
        target/debug/deps/libcore_foundation-c15509bd50681163.rmeta
        target/debug/deps/libcore_foundation_sys-2d168949928a45f4.rmeta
        target/debug/deps/libcore_foundation_sys-5e0377da84d1fd24.rlib
        target/debug/deps/libdocopt-cd1cf2d80a1760be.rlib
        target/debug/deps/libenv_logger-93eee5e46f502120.rmeta
        target/debug/deps/libenv_logger-dd8c71b23e66a2e8.rlib
        target/debug/deps/liberror_chain-bc9cbaac0dc6ad9f.rlib
        target/debug/deps/liberror_chain-d31ea0cdf2be8459.rmeta
        target/debug/deps/libfutures-78fb7b025f2f7345.rmeta
        target/debug/deps/libfutures-d379ed12f5c6d9b8.rlib
        target/debug/deps/libfutures_cpupool-07a9a79bc6ed40f0.rmeta
        target/debug/deps/libfutures_cpupool-73090c32d58c4cf2.rlib
        target/debug/deps/libhttparse-829302a26ae39b4c.rlib
        target/debug/deps/libhttparse-973e550f74a65707.rmeta
        target/debug/deps/libhyper-3afb1bfd76e17040.rmeta
        target/debug/deps/libhyper-562fe4ac875a4e17.rlib
        target/debug/deps/libiovec-45bb737f63719274.rlib
        target/debug/deps/libiovec-e36d51f1bd9e462c.rmeta
        target/debug/deps/libkernel32-54fcc6c0e05888ab.rlib
        target/debug/deps/liblanguage_tags-4b15d0aeda9396de.rlib
        target/debug/deps/liblanguage_tags-6ff0d183aa161aa2.rmeta
        target/debug/deps/liblazy_static-13b6c292a41ea53a.rlib
        target/debug/deps/liblazy_static-3df41072f7f12904.rlib
        target/debug/deps/liblazy_static-ddf4564b294260b4.rmeta
        target/debug/deps/liblazycell-6d6debe47cf994d1.rlib
        target/debug/deps/liblazycell-97b34061ef134709.rmeta
        target/debug/deps/liblibc-505c1e095e37f76a.rlib
        target/debug/deps/liblibc-a0963b9d12089b7c.rmeta
        target/debug/deps/liblog-1ad371836ff53a4f.rmeta
        target/debug/deps/liblog-d5e360133802934c.rlib
        target/debug/deps/libmemchr-4739c7b9bfdeaf15.rmeta
        target/debug/deps/libmemchr-6b777856ea363189.rlib
        target/debug/deps/libmemchr-93613fc9ac222a31.rlib
        target/debug/deps/libmeter_proxy-bf555e4ecd797768.rlib
        target/debug/deps/libmime-1c31316d95520389.rlib
        target/debug/deps/libmime-83bb14fc9bf47a16.rmeta
        target/debug/deps/libmio-189e31a3da28c833.rmeta
        target/debug/deps/libmio-51fb29f18be47e8d.rlib
        target/debug/deps/libmio_uds-3f4bd50e66241537.rlib
        target/debug/deps/libmio_uds-75f09b90f399cd10.rmeta
        target/debug/deps/libnative_tls-5ca0a59fb6676316.rmeta
        target/debug/deps/libnative_tls-ad3ac54ce0237703.rlib
        target/debug/deps/libnet2-78cb8ae236be39ca.rlib
        target/debug/deps/libnet2-ed3b4755d00c6c7f.rmeta
        target/debug/deps/libnum-4bce48b8fcd44bd4.rlib
        target/debug/deps/libnum-debf0302dac6daf9.rmeta
        target/debug/deps/libnum_cpus-250e373bde344732.rlib
        target/debug/deps/libnum_cpus-aab148132bb5ee3d.rmeta
        target/debug/deps/libnum_integer-c5e560378f3411c8.rmeta
        target/debug/deps/libnum_integer-dcaeb61bd5e8bcbb.rlib
        target/debug/deps/libnum_iter-51fcea3ccd095b2e.rlib
        target/debug/deps/libnum_iter-751ed0ca137e4055.rmeta
        target/debug/deps/libnum_traits-36610bc7dc704ff0.rmeta
        target/debug/deps/libnum_traits-48c3cf477b7a0536.rlib
        target/debug/deps/libpercent_encoding-5d66723038d7a814.rlib
        target/debug/deps/libpercent_encoding-6b5cdbab509cc36d.rmeta
        target/debug/deps/libquote-a78f010f5f436b88.rlib
        target/debug/deps/librand-3d9ae2459e8466ca.rlib
        target/debug/deps/librand-ec50ce464f91f7ab.rmeta
        target/debug/deps/libregex-2a65e8a6faf88859.rlib
        target/debug/deps/libregex-58525377298460f1.rlib
        target/debug/deps/libregex-e4bf40a9356392a6.rmeta
        target/debug/deps/libregex_syntax-20e1a74abf21916b.rlib
        target/debug/deps/libregex_syntax-6b4595f24557db7a.rlib
        target/debug/deps/libregex_syntax-f1649a908e35d15b.rmeta
        target/debug/deps/librelay-4b69efd9f3efcea4.rmeta
        target/debug/deps/librelay-a25c0ba03b4ff710.rlib
        target/debug/deps/librustc_demangle-0e629f622839d082.rlib
        target/debug/deps/librustc_demangle-f4fb8e70d9319fa9.rmeta
        target/debug/deps/librustc_serialize-a1a8821bbb1e0027.rlib
        target/debug/deps/libsafemem-88f7229f7a3dc878.rmeta
        target/debug/deps/libsafemem-e04be0ee5e1a5fbb.rlib
        target/debug/deps/libscoped_tls-205762a4d9ced127.rlib
        target/debug/deps/libscoped_tls-f362d5319bbac777.rmeta
        target/debug/deps/libsecurity_framework-25b75daa21669b0d.rlib
        target/debug/deps/libsecurity_framework-ee8cce2d4825a434.rmeta
        target/debug/deps/libsecurity_framework_sys-ce0ad61d23522d31.rmeta
        target/debug/deps/libsecurity_framework_sys-d1c9720dc2531356.rlib
        target/debug/deps/libserde-d34f10d47fc82bfa.rmeta
        target/debug/deps/libserde-fd5fc2c9d121670a.rlib
        target/debug/deps/libserde_codegen_internals-e6fd391d182fcd32.rlib
        target/debug/deps/libserde_derive-dfd1bcda702545d2.dylib
        target/debug/deps/libslab-64750d2b3fa53aae.rmeta
        target/debug/deps/libslab-a15657b194eec803.rmeta
        target/debug/deps/libslab-a697a1ed6a2ee32d.rlib
        target/debug/deps/libslab-baaa6239e1df34e0.rlib
        target/debug/deps/libsmallvec-5c75b395547af885.rlib
        target/debug/deps/libsmallvec-9fb84803ec1606bc.rmeta
        target/debug/deps/libstrsim-e273dc93cee12e12.rlib
        target/debug/deps/libsyn-aee796464a7d909b.rlib
        target/debug/deps/libsynom-6c1d549e3ff84bbc.rlib
        target/debug/deps/libtake-245bc5c6ddc15115.rlib
        target/debug/deps/libtake-96a1f76cb9d8d9b0.rmeta
        target/debug/deps/libtempdir-2d0a2dcb33406b89.rlib
        target/debug/deps/libtempdir-4426dc381683b0c8.rmeta
        target/debug/deps/libthread_id-a7eb0143e08528f9.rlib
        target/debug/deps/libthread_local-4e0cd51dca21eab7.rlib
        target/debug/deps/libthread_local-7ce2b266d66f3f5e.rmeta
        target/debug/deps/libthread_local-922725c378471b9c.rlib
        target/debug/deps/libtime-177693ef5b32fcaa.rmeta
        target/debug/deps/libtime-92efbbde30f4a72a.rlib
        target/debug/deps/libtokio_core-17670819b657ae3f.rlib
        target/debug/deps/libtokio_core-4a6cbd33c48a091d.rmeta
        target/debug/deps/libtokio_io-b8e7073bf9696afa.rlib
        target/debug/deps/libtokio_io-d3e501963a04172c.rmeta
        target/debug/deps/libtokio_proto-102c5da54bd4b0fc.rlib
        target/debug/deps/libtokio_proto-f48384cff789acb5.rmeta
        target/debug/deps/libtokio_service-2c0872471973cbbb.rlib
        target/debug/deps/libtokio_service-5c08d831da03356f.rmeta
        target/debug/deps/libtokio_signal-0e6aea08b479225f.rmeta
        target/debug/deps/libtokio_signal-1b56f7ef17e8f902.rlib
        target/debug/deps/libtokio_tls-6d70dba0468cd477.rmeta
        target/debug/deps/libtokio_tls-ef010c1301f8e852.rlib
        target/debug/deps/libtoml-f162ae8a77c602da.rlib
        target/debug/deps/libtoml-f1cd9a9fe0fcf7ff.rmeta
        target/debug/deps/libunicase-adaf82a62f2ad8ab.rlib
        target/debug/deps/libunicase-eb3a688f2f65d3c1.rmeta
        target/debug/deps/libunicode_xid-08435b42373a08c2.rlib
        target/debug/deps/libunreachable-66b4f040a5adc8eb.rlib
        target/debug/deps/libunreachable-84a63c1ebece99d4.rmeta
        target/debug/deps/libutf8_ranges-2d611baa60000538.rlib
        target/debug/deps/libutf8_ranges-3d4aab68db51c985.rlib
        target/debug/deps/libutf8_ranges-abcb937737e3f586.rmeta
        target/debug/deps/libversion_check-478267df893bc2fd.rlib
        target/debug/deps/libvoid-0d955593f603028d.rmeta
        target/debug/deps/libvoid-cd98e6f12047f584.rlib
        target/debug/deps/libwinapi-783615fc4f1dd4b1.rlib
        target/debug/ftf
        target/debug/ftf.d
        target/debug/libftf.d
        target/release/build/core-foundation-sys-17c54058335dcead/output
        target/release/build/core-foundation-sys-17c54058335dcead/stderr
        target/release/build/core-foundation-sys-dbd4c8f371a9b4d0/build-script-build
        target/release/build/core-foundation-sys-dbd4c8f371a9b4d0/build_script_build-dbd4c8f371a9b4d0
        target/release/build/security-framework-sys-d91bae1f543c4e1b/build-script-build
        target/release/build/security-framework-sys-d91bae1f543c4e1b/build_script_build-d91bae1f543c4e1b
        target/release/build/security-framework-sys-ea4f516518ca7c12/output
        target/release/build/security-framework-sys-ea4f516518ca7c12/stderr
        target/release/build/unicase-02aef0cf74e74d3e/build-script-build
        target/release/build/unicase-02aef0cf74e74d3e/build_script_build-02aef0cf74e74d3e
        target/release/build/unicase-6ebc694e1e289d3c/output
        target/release/build/unicase-6ebc694e1e289d3c/stderr
        target/release/deps/ftf-c52e29a04aebdf62
        target/release/deps/libaho_corasick-42fe4f3fa5f100bc.rlib
        target/release/deps/libbacktrace-f003f4143f16ee31.rlib
        target/release/deps/libbase64-e62da5272b23bda2.rlib
        target/release/deps/libbyteorder-3f691bc2b5a053e3.rlib
        target/release/deps/libbytes-d553f19ec8d7e73b.rlib
        target/release/deps/libcfg_if-351a92736ac98c49.rlib
        target/release/deps/libchrono-f7e5b8e70e9ff0dc.rlib
        target/release/deps/libcore_foundation-3bf83138652c9e89.rlib
        target/release/deps/libcore_foundation_sys-29d81f94002ae32b.rlib
        target/release/deps/libenv_logger-2fc1306e8de4ba73.rlib
        target/release/deps/liberror_chain-8bcb046aeb8b0c69.rlib
        target/release/deps/libfutures-cbc291b37a1c99de.rlib
        target/release/deps/libfutures_cpupool-2b646b44c386f70d.rlib
        target/release/deps/libhttparse-aae24fba4530c60d.rlib
        target/release/deps/libhyper-94cea568744b2fb8.rlib
        target/release/deps/libiovec-804f6199bdd2921e.rlib
        target/release/deps/liblanguage_tags-bd9885f0b20b7ff9.rlib
        target/release/deps/liblazy_static-072bb99e68ef10f4.rlib
        target/release/deps/liblazycell-e3f8a9012ac286e6.rlib
        target/release/deps/liblibc-3c8c6c144a944c87.rlib
        target/release/deps/liblog-547ba05951f6e38a.rlib
        target/release/deps/libmemchr-e18d769298000d0a.rlib
        target/release/deps/libmime-10ad4e6bce6a896c.rlib
        target/release/deps/libmio-981d059c4c958715.rlib
        target/release/deps/libmio_uds-83dd476ca547bd5d.rlib
        target/release/deps/libnative_tls-772869cf4fd07d42.rlib
        target/release/deps/libnet2-3132eff04f1bc093.rlib
        target/release/deps/libnum-fe28849ce06813e2.rlib
        target/release/deps/libnum_cpus-2c10629efd80986b.rlib
        target/release/deps/libnum_integer-6f059e15a455d182.rlib
        target/release/deps/libnum_iter-1653317589b4bdef.rlib
        target/release/deps/libnum_traits-2b8e7c6a2380e84f.rlib
        target/release/deps/libpercent_encoding-b0d7244632003b2e.rlib
        target/release/deps/libquote-bc402ebd39f3e1e3.rlib
        target/release/deps/librand-fbb200436b2ccd74.rlib
        target/release/deps/libregex-b041937f11e92580.rlib
        target/release/deps/libregex_syntax-4fcdb4a7953b8273.rlib
        target/release/deps/librelay-1d3e21859e8a942d.rlib
        target/release/deps/librustc_demangle-0b43f3243284375f.rlib
        target/release/deps/libsafemem-0ab022b6aacac42b.rlib
        target/release/deps/libscoped_tls-647b0dd18875abd1.rlib
        target/release/deps/libsecurity_framework-04e1af9fcfab76f3.rlib
        target/release/deps/libsecurity_framework_sys-d4704de7ef617a5f.rlib
        target/release/deps/libserde-526bf04c6b402f75.rlib
        target/release/deps/libserde_codegen_internals-b96befe9cc7d1da4.rlib
        target/release/deps/libserde_derive-c3dba24c25d92486.dylib
        target/release/deps/libslab-1784b974cef8f3a6.rlib
        target/release/deps/libslab-b0c14580e8b6a130.rlib
        target/release/deps/libsmallvec-8f9de6252035e958.rlib
        target/release/deps/libsyn-2915fef44e3b8180.rlib
        target/release/deps/libsynom-3109a89fbcdf0e6d.rlib
        target/release/deps/libtake-3b5008c82e0e3282.rlib
        target/release/deps/libtempdir-f3e617c3754d1447.rlib
        target/release/deps/libthread_local-9c0e96f0f5e3dec4.rlib
        target/release/deps/libtime-771313dfd4e5a387.rlib
        target/release/deps/libtokio_core-5367d0aa83759d38.rlib
        target/release/deps/libtokio_io-5eae9bb976fa1556.rlib
        target/release/deps/libtokio_proto-6965777c75fe5a1c.rlib
        target/release/deps/libtokio_service-4e21cad3270edb15.rlib
        target/release/deps/libtokio_signal-fd5ee6ed8acf0daa.rlib
        target/release/deps/libtokio_tls-e410d07a804b2583.rlib
        target/release/deps/libtoml-b09ce8f86786ed5d.rlib
        target/release/deps/libunicase-81bbd419c4e801e9.rlib
        target/release/deps/libunicode_xid-97471aaf1b341aa3.rlib
        target/release/deps/libunreachable-42685d920d5747ca.rlib
        target/release/deps/libutf8_ranges-b77aeccefd33a9fb.rlib
        target/release/deps/libversion_check-5fb856ddb7f6ea0f.rlib
        target/release/deps/libvoid-528fd7a3e059e2a1.rlib
        target/release/ftf
        target/release/ftf.d
        Cargo.lock
        Cargo.toml
        Hyproxy.toml)

add_executable(ftf ${SOURCE_FILES})